--- a/templates/wild-series/index.html.twig
+++ b/templates/wild-series/index.html.twig
@@ -1,4 +1,5 @@
-{%  extends 'base' %}
-
-{% block title %}<h1>Bienvenue sur WILD SERIES</h1>{% endblock %}
+{%  extends 'base.html.twig' %}
+{% block body %}
+<h1>{{ website }} index</h1>
+{% endblock %}
 
