--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,19 +1,3 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %} {{ '/wild-series/index.html.twig' }}{% endblock %}</title>
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
-    </head>
-    <header> {{ '/wild-series/navbar.html.twig' }}</header>
+{%  extends 'base.html.twig' %}
 
-    <body>
-    <script src="build/js/app.js"></script>
-        {% block body %}{% endblock %}
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-        {% endblock %}
-    </body>
-</html>
+{% block body %} <h1>Bienvenu sur {{ webiste }} !</h1>{% endblock %}
