--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,3 +1,3 @@
 {%  extends 'base.html.twig' %}
 
-{% block body %} <h1>Bienvenu sur {{ webiste }} !</h1>{% endblock %}
+{% block body %} <h1>Bienvenue sur {{ website }} !</h1>{% endblock %}
