--- a/templates/wild-series/index.html.twig
+++ b/templates/wild-series/index.html.twig
@@ -1,5 +1,4 @@
 {%  extends 'base.html.twig' %}
-{% block body %}
-<h1>{{ website }} index</h1>
-{% endblock %}
+
+{% block body %}<h1>{{ website }} index</h1>{% endblock %}
 
