--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,15 +2,19 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %} Welcome! {% endblock %}</title>
+        <title>
+            {% block title %}{% endblock %}
+        </title>
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
             <link href="https://fonts.googleapis.com/css?family=Calistoga|Open+Sans+Condensed:300&display=swap" rel="stylesheet">
         {% endblock %}
     </head>
     <body>
-    <header> {% include 'navbar.html.twig' %}</header>
-        {% block body %}{% endblock %}
+        <header>
+            {% include 'navbar.html.twig' %}
+        </header>
+            {% block body %}{% endblock %}
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
