--- a/templates/wild/index.html.twig
+++ b/templates/wild/index.html.twig
@@ -4,15 +4,22 @@
 
 {% block body %}
     <h1>Toutes les séries de la table program : </h1>
-    {% for program in programs %}
-        <div>
-            <h2>{{ loop.index }} / {{ program.title }} - Catégorie : {{ program.category.name }}</h2>
-            <p>{{ program.summary }}</p>
-        </div>
-    {% else %}
-        Aucune série trouvée.
-    {% endfor %}
-<a href="{{ path('app_index') }}">
+    <div class="row">
+        {% for program in programs %}
+            <div class="col-md-4">
+                <a href="{{ path('show_program', {"programName" : program.title | lower |replace({" " : "-"}) }) }}"><img class="card-img-top" height="70%" src="{{program.poster}}" alt="{{ program.title }} poster" width="50px"></a>
+                <div class="card-body">
+                    <h2>{{ loop.index }} / {{ program.title }} - Catégorie : {{ program.category.name }}</h2>
+                    <p>{{ program.summary }}</p>
+                </div>
+            </div>
+
+        {% else %}
+            Aucune série trouvée.
+        {% endfor %}
+    </div>
+
+    <a href="{{ path('app_index') }}">
         Retour à l'accueil
     </a>
 {% endblock %}
