--- a/templates/wild/episode.html.twig
+++ b/templates/wild/episode.html.twig
@@ -3,15 +3,19 @@
 {% block body %}
     <div class="media">
         <div class="media-body">
-            <h3 class="mt-0">Série : {{ program.title }} </h3>
-            <img class="align-self-start mr-3" src="{{ program.poster }}">
-            <p>Résumer : {{ program.summary }}</p>
+            <img class="align-self-start mr-3" src="{{program.poster}}" alt="{{ program.title }} poster">
         </div>
         <div class="media-body">
-            <strong>Saison : </strong><a href="{{ path('show_season', { id: season.id }) }}">Voir le détail de la
-                saison </a><br>
-            <strong>Programme : </strong><a href="{{ path('show_program', { programName: program.title | lower | replace({" " : "-" }) }) }}">Voir le détail du
-                programme </a>
+            </br>
+            </br>
+            <strong>Episode :{{ episode.title }}  </strong>
+            </br>
+            </br>
+            <p>Le Synopsis : {{ episode.synopsis }}</p>
+            <a href="{{ path('lesSeries') }}">
+                Retourner aux séries
+            </a>
         </div>
     </div>
+
 {% endblock %}
